Updated notebook analysis and output

--- a/1_equal_weight_S&P_500.ipynb
+++ b/1_equal_weight_S&P_500.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "[505 rows x 1 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,15 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api.iex.cloud/v1/data/core/quote/AAPL?token=pk_b868552dd32549b299eb1e749ea12fe2\n",
-      "[{'avgTotalVolume': 64598739, 'calculationPrice': 'close', 'change': 0.76, 'changePercent': 0.0045, 'close': 169.58, 'closeSource': 'official', 'closeTime': 1712347200333, 'companyName': 'Apple Inc', 'currency': 'USD', 'delayedPrice': 169.655, 'delayedPriceTime': 1712347194914, 'extendedChange': -0.065, 'extendedChangePercent': -0.00038, 'extendedPrice': 169.515, 'extendedPriceTime': 1712361599166, 'high': 170.39, 'highSource': '15 minute delayed price', 'highTime': 1712347200000, 'iexAskPrice': 0, 'iexAskSize': 0, 'iexBidPrice': 0, 'iexBidSize': 0, 'iexClose': 169.68, 'iexCloseTime': 1712347197127, 'iexLastUpdated': 1712347197127, 'iexMarketPercent': 0.014482069110082535, 'iexOpen': 169.51, 'iexOpenTime': 1712323801169, 'iexRealtimePrice': 169.68, 'iexRealtimeSize': 100, 'iexVolume': 609765, 'lastTradeTime': 1712347199767, 'latestPrice': 169.58, 'latestSource': 'Close', 'latestTime': 'April 5, 2024', 'latestUpdate': 1712347200333, 'latestVolume': 42104826, 'low': 168.82, 'lowSource': 'Close', 'lowTime': 1712347200333, 'marketCap': 2618634179980, 'oddLotDelayedPrice': 169.65, 'oddLotDelayedPriceTime': 1712347194927, 'open': 169.5, 'openTime': 1712323800169, 'openSource': 'official', 'peRatio': 26.41, 'previousClose': 168.82, 'previousVolume': 53704386, 'primaryExchange': 'NASDAQ', 'symbol': 'AAPL', 'volume': 42104826, 'week52High': 199.11, 'week52Low': 158.31, 'ytdChange': -0.11245296178496515, 'isUSMarketOpen': False}]\n"
+      "[{'avgTotalVolume': 63950500, 'calculationPrice': 'close', 'change': 0.76, 'changePercent': 0.0045, 'close': None, 'closeSource': 'official', 'closeTime': None, 'companyName': 'Apple Inc', 'currency': 'USD', 'delayedPrice': None, 'delayedPriceTime': None, 'extendedChange': None, 'extendedChangePercent': None, 'extendedPrice': None, 'extendedPriceTime': None, 'high': None, 'highSource': None, 'highTime': None, 'iexAskPrice': 169.11, 'iexAskSize': 238, 'iexBidPrice': 0, 'iexBidSize': 0, 'iexClose': 169.06, 'iexCloseTime': 1712577936925, 'iexLastUpdated': 1712577936925, 'iexMarketPercent': 0.0010838498010152199, 'iexOpen': 169.05, 'iexOpenTime': 1712577936925, 'iexRealtimePrice': 169.05, 'iexRealtimeSize': 35, 'iexVolume': 259, 'lastTradeTime': 1712347199767, 'latestPrice': 169.58, 'latestSource': 'Close', 'latestTime': 'April 5, 2024', 'latestUpdate': 1712347200333, 'latestVolume': None, 'low': None, 'lowSource': 'Close', 'lowTime': 1712347200333, 'marketCap': 2618634179980, 'oddLotDelayedPrice': None, 'oddLotDelayedPriceTime': None, 'open': None, 'openTime': None, 'openSource': 'official', 'peRatio': 26.41, 'previousClose': 168.82, 'previousVolume': 53704386, 'primaryExchange': 'NASDAQ', 'symbol': 'AAPL', 'volume': None, 'week52High': 199.11, 'week52Low': 158.31, 'ytdChange': -0.11245296178496515, 'isUSMarketOpen': False}]\n"
      ]
     }
    ],
@@ -209,7 +208,6 @@
     "api_url = f'https://api.iex.cloud/v1/data/core/quote/{symbol}?token={IEX_CLOUD_API_TOKEN}'\n",
     "# Legacy API\n",
     "# api_url = f'https://sandbox.iexapis.com/stable/stock/{symbol}/quote/?token={IEX_CLOUD_API_TOKEN}'\n",
-    "print(api_url)\n",
     "data = requests.get(api_url).json()\n",
     "print(data)"
    ]
@@ -227,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +301,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_3838/3212206648.py:6: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_39191/3212206648.py:6: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  final_dataframe = pd.concat([final_dataframe, new_row_df], ignore_index=True)\n"
      ]
     },
@@ -381,7 +379,7 @@
        "0   AAPL       169.58         2618634179980                     N/A"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_3838/3576039709.py:8: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_39191/3576039709.py:8: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  final_dataframe = pd.concat([final_dataframe, new_row_df], ignore_index = True)\n"
      ]
     }
@@ -432,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +509,7 @@
        "4   ABBV       170.00          301009987110                     N/A"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -566,14 +564,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_3838/3837765038.py:7: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_39191/3837765038.py:7: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  final_dataframe = pd.concat([final_dataframe, pd.DataFrame([[stock['symbol'], stock['latestPrice'], stock['marketCap'], 'N/A']], columns = my_columns)], ignore_index = True)\n"
      ]
     },
@@ -704,7 +702,7 @@
        "[505 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +906,7 @@
        "[505 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,14 +938,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_3838/2598291447.py:2: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
+      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_39191/2598291447.py:2: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
       "  final_dataframe.to_excel(writer, 'Recommended Trades', index = False)\n"
      ]
     }
@@ -972,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1078,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
