--- a/2_quantitative_momentum_strategy.ipynb
+++ b/2_quantitative_momentum_strategy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,16 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://api.iex.cloud/v1/data/core/advanced_stats/AAPL?token=pk_b868552dd32549b299eb1e749ea12fe2\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -112,7 +105,7 @@
        "  'avg30Volume': 63950500,\n",
        "  'day200MovingAvg': 181.9,\n",
        "  'day50MovingAvg': 174.59,\n",
-       "  'employees': 147000,\n",
+       "  'employees': 164000,\n",
        "  'ttmEPS': 6.42,\n",
        "  'ttmDividendRate': 0.9562637739139714,\n",
        "  'dividendYield': 0.005639012701462268,\n",
@@ -132,7 +125,7 @@
        "  'day5ChangePercent': -0.01108000933053399}]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +133,6 @@
    "source": [
     "symbol = 'AAPL'\n",
     "api_url = f'https://api.iex.cloud/v1/data/core/advanced_stats/{symbol}?token={IEX_CLOUD_API_TOKEN}'\n",
-    "print(api_url)\n",
     "\n",
     "# api documentation: https://iexcloud.io/docs/core/ADVANCED_STATS\n",
     "\n",
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +160,7 @@
        "0.03946510270832215"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,16 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://api.iex.cloud/v1/data/core/ADVANCED_STATS,QUOTE/A,AAL,AAP,AAPL,ABBV,ABC,ABMD,ABT,ACN,ADBE,ADI,ADM,ADP,ADSK,AEE,AEP,AES,AFL,AIG,AIV,AIZ,AJG,AKAM,ALB,ALGN,ALK,ALL,ALLE,ALXN,AMAT,AMCR,AMD,AME,AMGN,AMP,AMT,AMZN,ANET,ANSS,ANTM,AON,AOS,APA,APD,APH,APTV,ARE,ATO,ATVI,AVB,AVGO,AVY,AWK,AXP,AZO,BA,BAC,BAX,BBY,BDX,BEN,BF.B,BIIB,BIO,BK,BKNG,BKR,BLK,BLL,BMY,BR,BRK.B,BSX,BWA,BXP,C,CAG,CAH,CARR,CAT,CB,CBOE,CBRE,CCI,CCL,CDNS,CDW,CE,CERN,CF,CFG,CHD,CHRW,CHTR,CI,CINF,CL,CLX,CMA,CMCSA,CME,CMG,CMI,CMS,CNC,CNP,COF,COG,COO,COP,COST,COTY,CPB,CPRT,CRM,CSCO,CSX,CTAS,CTL,CTSH,CTVA,CTXS,CVS,CVX,CXO,D,DAL,DD,DE,DFS,DG,DGX,DHI,DHR,DIS,DISCA,DISCK,DISH,DLR,DLTR,DOV,DOW,DPZ,DRE,DRI,DTE,DUK,DVA,DVN,DXC,DXCM,EA,EBAY,ECL,ED,EFX,EIX,EL,EMN,EMR,EOG,EQIX,EQR,ES,ESS,ETFC,ETN,ETR,EVRG,EW,EXC,EXPD,EXPE,EXR,F,FANG,FAST,FB,FBHS,FCX,FDX,FE,FFIV,FIS,FISV,FITB,FLIR,FLS,FLT,FMC,FOX,FOXA,FRC,FRT,FTI,FTNT,FTV,GD,GE,GILD,GIS,GL,GLW,GM,GOOG,GOOGL,GPC,GPN,GPS,GRMN,GS,GWW,HAL,HAS,HBAN,HBI,HCA,HD,HES,HFC,HIG,HII,HLT,HOLX,HON,HPE,HPQ,HRB,HRL,HSIC,HST,HSY,HUM,HWM,IBM,ICE,IDXX,IEX,IFF,ILMN,INCY,INFO,INTC,INTU,IP,IPG,IPGP,IQV,IR,IRM,ISRG,IT,ITW,IVZ,J,JBHT,JCI,JKHY,JNJ,JNPR,JPM,K,KEY,KEYS,KHC,KIM,KLAC,KMB,KMI,KMX,KO,KR,KSS,KSU,L,LB,LDOS,LEG,LEN,LH,LHX,LIN,LKQ,LLY,LMT,LNC,LNT,LOW,LRCX,LUV,LVS,LW,LYB,LYV,MA,MAA,MAR,MAS,MCD,MCHP,MCK,MCO,MDLZ,MDT,MET,MGM,MHK,MKC,MKTX,MLM,MMC,MMM,MNST,MO,MOS,MPC,MRK,MRO,MS,MSCI,MSFT,MSI,MTB,MTD,MU,MXIM,MYL,NBL,NCLH,NDAQ,NEE,NEM,NFLX,NI,NKE,NLOK,NLSN,NOC,NOV,NOW,NRG,NSC,NTAP,NTRS,NUE,NVDA,NVR,NWL,NWS,NWSA,O,ODFL,OKE,OMC,ORCL,ORLY,OTIS,OXY,PAYC,PAYX,PBCT,PCAR,PEAK,PEG,PEP,PFE,PFG,PG,PGR,PH,PHM,PKG,PKI,PLD,PM,PNC,PNR,PNW,PPG,PPL,PRGO,PRU,PSA,PSX,PVH,PWR,PXD,PYPL,QCOM,QRVO,RCL,RE,REG,REGN,RF,RHI,RJF,RL,RMD,ROK,ROL,ROP,ROST,RSG,RTX,SBAC,SBUX,SCHW,SEE,SHW,SIVB,SJM,SLB,SLG,SNA,SNPS,SO,SPG,SPGI,SRE,STE,STT,STX,STZ,SWK,SWKS,SYF,SYK,SYY,T,TAP,TDG,TDY,TEL,TFC,TFX,TGT,TIF,TJX,TMO,TMUS,TPR,TROW,TRV,TSCO,TSN,TT,TTWO,TWTR,TXN,TXT,TYL,UA,UAA,UAL,UDR,UHS,ULTA,UNH,UNM,UNP,UPS,URI,USB,V,VAR,VFC,VIAC,VLO,VMC,VNO,VRSK,VRSN,VRTX,VTR,VZ,WAB,WAT,WBA,WDC,WEC,WELL,WFC,WHR,WLTW,WM,WMB,WMT,WRB,WRK,WST,WU,WY,WYNN,XEL,XLNX,XOM,XRAY,XRX,XYL,YUM,ZBH,ZBRA,ZION,ZTS?token=pk_b868552dd32549b299eb1e749ea12fe2\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -270,7 +255,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +270,6 @@
     "symbol_list = stocks['Ticker'].to_list()\n",
     "symbol_string = ','.join(symbol_list)\n",
     "batch_api_url = f'https://api.iex.cloud/v1/data/core/ADVANCED_STATS,QUOTE/{symbol_string}?token={IEX_CLOUD_API_TOKEN}'\n",
-    "print(batch_api_url)\n",
     "final_dataframe"
    ]
   },
@@ -298,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_32509/1421066058.py:10: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_39106/1421066058.py:10: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  final_dataframe = pd.concat([final_dataframe, pd.DataFrame([[stock_quote['symbol'], stock_quote['companyName'], stock_stats['companyName'], stock_quote['latestPrice'], stock_stats['year1ChangePercent'], 'N/A']], columns = my_columns)], ignore_index = True)\n"
      ]
     },
@@ -481,7 +465,7 @@
        "[505 rows x 6 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1155,7 @@
        "50               0.571693                     N/A  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1867,7 @@
        "50               0.571693                     130  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,14 +1905,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://api.iex.cloud/v1/data/core/ADVANCED_STATS,QUOTE/A,AAL,AAP,AAPL,ABBV,ABC,ABMD,ABT,ACN,ADBE,ADI,ADM,ADP,ADSK,AEE,AEP,AES,AFL,AIG,AIV,AIZ,AJG,AKAM,ALB,ALGN,ALK,ALL,ALLE,ALXN,AMAT,AMCR,AMD,AME,AMGN,AMP,AMT,AMZN,ANET,ANSS,ANTM,AON,AOS,APA,APD,APH,APTV,ARE,ATO,ATVI,AVB,AVGO,AVY,AWK,AXP,AZO,BA,BAC,BAX,BBY,BDX,BEN,BF.B,BIIB,BIO,BK,BKNG,BKR,BLK,BLL,BMY,BR,BRK.B,BSX,BWA,BXP,C,CAG,CAH,CARR,CAT,CB,CBOE,CBRE,CCI,CCL,CDNS,CDW,CE,CERN,CF,CFG,CHD,CHRW,CHTR,CI,CINF,CL,CLX,CMA,CMCSA,CME,CMG,CMI,CMS,CNC,CNP,COF,COG,COO,COP,COST,COTY,CPB,CPRT,CRM,CSCO,CSX,CTAS,CTL,CTSH,CTVA,CTXS,CVS,CVX,CXO,D,DAL,DD,DE,DFS,DG,DGX,DHI,DHR,DIS,DISCA,DISCK,DISH,DLR,DLTR,DOV,DOW,DPZ,DRE,DRI,DTE,DUK,DVA,DVN,DXC,DXCM,EA,EBAY,ECL,ED,EFX,EIX,EL,EMN,EMR,EOG,EQIX,EQR,ES,ESS,ETFC,ETN,ETR,EVRG,EW,EXC,EXPD,EXPE,EXR,F,FANG,FAST,FB,FBHS,FCX,FDX,FE,FFIV,FIS,FISV,FITB,FLIR,FLS,FLT,FMC,FOX,FOXA,FRC,FRT,FTI,FTNT,FTV,GD,GE,GILD,GIS,GL,GLW,GM,GOOG,GOOGL,GPC,GPN,GPS,GRMN,GS,GWW,HAL,HAS,HBAN,HBI,HCA,HD,HES,HFC,HIG,HII,HLT,HOLX,HON,HPE,HPQ,HRB,HRL,HSIC,HST,HSY,HUM,HWM,IBM,ICE,IDXX,IEX,IFF,ILMN,INCY,INFO,INTC,INTU,IP,IPG,IPGP,IQV,IR,IRM,ISRG,IT,ITW,IVZ,J,JBHT,JCI,JKHY,JNJ,JNPR,JPM,K,KEY,KEYS,KHC,KIM,KLAC,KMB,KMI,KMX,KO,KR,KSS,KSU,L,LB,LDOS,LEG,LEN,LH,LHX,LIN,LKQ,LLY,LMT,LNC,LNT,LOW,LRCX,LUV,LVS,LW,LYB,LYV,MA,MAA,MAR,MAS,MCD,MCHP,MCK,MCO,MDLZ,MDT,MET,MGM,MHK,MKC,MKTX,MLM,MMC,MMM,MNST,MO,MOS,MPC,MRK,MRO,MS,MSCI,MSFT,MSI,MTB,MTD,MU,MXIM,MYL,NBL,NCLH,NDAQ,NEE,NEM,NFLX,NI,NKE,NLOK,NLSN,NOC,NOV,NOW,NRG,NSC,NTAP,NTRS,NUE,NVDA,NVR,NWL,NWS,NWSA,O,ODFL,OKE,OMC,ORCL,ORLY,OTIS,OXY,PAYC,PAYX,PBCT,PCAR,PEAK,PEG,PEP,PFE,PFG,PG,PGR,PH,PHM,PKG,PKI,PLD,PM,PNC,PNR,PNW,PPG,PPL,PRGO,PRU,PSA,PSX,PVH,PWR,PXD,PYPL,QCOM,QRVO,RCL,RE,REG,REGN,RF,RHI,RJF,RL,RMD,ROK,ROL,ROP,ROST,RSG,RTX,SBAC,SBUX,SCHW,SEE,SHW,SIVB,SJM,SLB,SLG,SNA,SNPS,SO,SPG,SPGI,SRE,STE,STT,STX,STZ,SWK,SWKS,SYF,SYK,SYY,T,TAP,TDG,TDY,TEL,TFC,TFX,TGT,TIF,TJX,TMO,TMUS,TPR,TROW,TRV,TSCO,TSN,TT,TTWO,TWTR,TXN,TXT,TYL,UA,UAA,UAL,UDR,UHS,ULTA,UNH,UNM,UNP,UPS,URI,USB,V,VAR,VFC,VIAC,VLO,VMC,VNO,VRSK,VRSN,VRTX,VTR,VZ,WAB,WAT,WBA,WDC,WEC,WELL,WFC,WHR,WLTW,WM,WMB,WMT,WRB,WRK,WST,WU,WY,WYNN,XEL,XLNX,XOM,XRAY,XRX,XYL,YUM,ZBH,ZBRA,ZION,ZTS?token=pk_b868552dd32549b299eb1e749ea12fe2\n",
       "1010\n",
       "505\n"
      ]
@@ -1937,7 +1920,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_32509/233637161.py:34: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/_5/hcq3myc97jn9bf7mbp59_jn00000gn/T/ipykernel_39106/607774781.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  hqm_dataframe = pd.concat([hqm_dataframe, pd.DataFrame([[\n"
      ]
     },
@@ -2253,7 +2236,7 @@
        "[486 rows x 14 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2281,7 +2264,6 @@
     "symbol_list = stocks['Ticker'].to_list()\n",
     "symbol_string = ','.join(symbol_list)\n",
     "hqm_batch_api_url = f'https://api.iex.cloud/v1/data/core/ADVANCED_STATS,QUOTE/{symbol_string}?token={IEX_CLOUD_API_TOKEN}'\n",
-    "print(batch_api_url)\n",
     "\n",
     "hqm_data = requests.get(hqm_batch_api_url).json()\n",
     "print(len(data))\n",
@@ -2332,7 +2314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2647,7 +2629,7 @@
        "[486 rows x 14 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2695,7 +2677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -3010,7 +2992,7 @@
        "[486 rows x 14 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3038,7 +3020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3049,7 +3031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4281,7 +4263,7 @@
        "50                   53.292181  79.526749  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4301,7 +4283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -4318,7 +4300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -5550,7 +5532,7 @@
        "50                   53.292181  79.526749  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5576,7 +5558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5602,7 +5584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5647,15 +5629,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "column_formats = { \n",
     "                    'A': ['Ticker', string_template],\n",
-    "                    'B': ['Price', dollar_template],\n",
-    "                    'C': ['Company Name', string_template],\n",
-    "                    'D': ['Company Name V', string_template],\n",
+    "                    'B': ['Company Name', string_template],\n",
+    "                    'C': ['Company Name V', string_template],\n",
+    "                    'D': ['Price', dollar_template],\n",
     "                    'E': ['Number of Shares to Buy', integer_template],\n",
     "                    'F': ['One-Year Price Return', percent_template],\n",
     "                    'G': ['One-Year Return Percentile', percent_template],\n",
@@ -5684,7 +5666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
